# Triratna_bot_beta

./: .env  .gitignore  README.md  pyproject.toml
cache/arkgacha/: user.json
data/arkgacha/: pool.json
data/capoo/: md5.db
data/learning_chat/: learning_chat.db  learning_chat.yml
data/md_data/: dif.json  musics.json  musics_name.json
data/nonebot_plugin_ottohzys/otto/: config.json  ysdd.json
data/who@me/: data.db
